<?xml version="1.0"?>
<package format="2">
  <name>jbd_bms_status</name>
  <version>1.1.0</version>
  <description>The jbd bms status package</description>

  <maintainer email="hangliu@iquotient-robotics.com">liu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jbd_bms_msg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>jbd_bms_msg</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>jbd_bms_msg</exec_depend>

  <export>

  </export>
</package>
